2010-02-13  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: add an instance flag that helps us decide
	if we should attempt normal startup or try to avoid reentering at
	all calls in CreateWindow.

	Works aroud the hang when trying to load moonlight in chromium
	without breaking the firefox startup sequence.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp|h: The default value for AllowHtmlPopupWindow is
	different for same-domain applications (true) and cross-domain
	applications (false) unless it is specifically specified.

2010-01-28  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (plugin_menu_about): correct url to moonlight-project
	website.


2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* plugin-class.[h.in|cpp]: Use plugin code for
	HtmlObject(Attach|Detach)Event instead of bridge calls

	* plugin-domevents.[h|cpp]: NPAPI implementation
	  of DOM Event listeners, to replace the gecko-specific
	  bridge code

	* plugin.[h|cpp]: Add FF3.6 bridge. Replace bridge calls
	  for HtmlObject(Attach|Detach)Event with NPAPI implementations

	* browser-bridge.h: removed DOM code, replaced by
	  plugin-domevents.*

	* plugin-class.h: regenerated

2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: value_to_variant: add a ref to the NPObject, so
	that the caller can call NPN_RelaseVariantObject on the returned
	variant (which must be done to free it if it is a string).
	html_object_set_property: call NPN_ReleaseVariantObject on the
	temporary variant.

2010-01-25  Andreia Gaita  <avidigal@novell.com>

      * moonlight.h, npstream-request.cpp, plugin-class.cpp,
        plugin-class.h, plugin-class.h.in, plugin-entry.cpp,
        plugin-glue.cpp, plugin.cpp, plugin.h,
        moz-sdk/npapi.h, moz-sdk/npruntime.h: NPAPI symbol renaming

2010-01-14  Andreia Gaita  <avidigal@novell.com>

	* plugin-entry.cpp, plugin-glue.cpp, moz-sdk/npapi.h: add
	MOON_ prefix to NPP_GetMIMEDescription, NPP_Initialize,